// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLinks > renders with as correctly 1`] = `
"<div class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</div>"
`;

exports[`PageLinks > renders with class correctly 1`] = `
"<nav class="flex flex-col gap-1.5">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link slot correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link slot</a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link slot</a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium">Link slot</button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link slot</a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-label slot correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Link label slot<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Link label slot<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Link label slot<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Link label slot<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-leading slot correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link leading slot<span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link leading slot<span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium">Link leading slot<span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors">Link leading slot<span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with link-trailing slot correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span>Link trailing slot</a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>Link trailing slot</a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span>Link trailing slot</button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span>Link trailing slot</a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with links correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with title correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <p class="text-sm font-semibold flex items-center gap-1.5">Resources</p>
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with title slot correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <p class="text-sm font-semibold flex items-center gap-1.5">Title slot</p>
  <ul class="flex flex-col gap-2">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;

exports[`PageLinks > renders with ui correctly 1`] = `
"<nav class="flex flex-col gap-3">
  <!--v-if-->
  <ul class="flex flex-col gap-3">
    <li class="relative"><a href="/docs" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:book-open size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Documentation<!--v-if--></span></a></li>
    <li class="relative"><a href="https://stackblitz.com/edit/nuxt-ui" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-simple-icons:stackblitz size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Playground<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
    <li class="relative"><button type="button" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-primary font-medium"><span class="iconify i-lucide:map size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Roadmap<!--v-if--></span></button></li>
    <li class="relative"><a href="https://github.com/nuxt/ui/releases" rel="noopener noreferrer" target="_blank" class="group text-sm flex items-center gap-1.5 focus-visible:outline-primary text-muted hover:text-default transition-colors"><span class="iconify i-lucide:rocket size-5 shrink-0" aria-hidden="true"></span><span class="truncate">Releases<span class="iconify i-lucide:arrow-up-right size-3 absolute top-0 text-dimmed" aria-hidden="true"></span></span></a></li>
  </ul>
</nav>"
`;
